--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-  "plugins": [],
+  "plugins": [
+    "@babel/plugin-transform-runtime"
+  ],
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react"
