--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "Maximo Martinez Soria <maximo.martinezsoria@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "7.9.5",
     "@babel/preset-react": "7.9.4",
     "babel-loader": "8.1.0",
@@ -23,11 +25,11 @@
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "style-loader": "1.1.4",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^4.3.1",
     "terser-webpack-plugin": "2.3.5",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^4.3.1"
+    "webpack-dev-server": "3.10.3"
   }
 }
