--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
@@ -24,6 +27,7 @@
     "html-webpack-plugin": "4.2.0",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "redux-devtools-extension": "^2.13.8",
     "style-loader": "1.1.4",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.1",
