--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./webpack.dev.config.js",
-    "build": "webpack --config ./webpack.config.js --mode production"
+    "dev": "nodemon src/server/",
+    "build": "ENV=production webpack-cli --config ./webpack.config.js"
   },
   "author": "Maximo Martinez Soria <maximo.martinezsoria@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
@@ -25,16 +30,16 @@
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.5.2",
-    "html-webpack-plugin": "4.2.0",
     "mini-css-extract-plugin": "0.9.0",
+    "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "react-hot-loader": "^4.13.0",
     "redux-devtools-extension": "^2.13.8",
-    "style-loader": "1.1.4",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.1",
     "terser-webpack-plugin": "2.3.5",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3"
+    "webpack-manifest-plugin": "3.0.0-rc.0"
   }
 }
