--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server/",
-    "build": "ENV=production webpack-cli --config ./webpack.config.js"
+    "build": "ENV=production webpack-cli --config ./webpack.config.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Maximo Martinez Soria <maximo.martinezsoria@gmail.com>",
   "license": "MIT",
@@ -30,6 +32,9 @@
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.5.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
