--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "react-hot-loader": "^4.13.0",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.4",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.1",
     "terser-webpack-plugin": "2.3.5",
