--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon src/server/",
     "build": "ENV=production webpack-cli --config ./webpack.config.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cy:open": "cypress open"
   },
   "author": "Maximo Martinez Soria <maximo.martinezsoria@gmail.com>",
   "license": "MIT",
@@ -32,6 +33,7 @@
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.5.2",
+    "cypress": "^6.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "jest": "^26.6.3",
