--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "webpack-dev-middleware": "^4.0.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "react-hot-loader": "^4.13.0",
+    "webpack": "4.42.1"
   },
   "devDependencies": {
     "babel-loader": "8.1.0",
@@ -45,15 +45,15 @@
     "mini-css-extract-plugin": "0.9.0",
     "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "react-hot-loader": "^4.13.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.4",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.1",
     "terser-webpack-plugin": "2.3.5",
-    "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
-    "webpack-manifest-plugin": "3.0.0-rc.0"
+    "webpack-manifest-plugin": "3.0.0-rc.0",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
