--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "jest": {
+    "testRegex": "src/frontend/__test__/.*\\.test.js$",
     "setupFilesAfterEnv": [
       "<rootDir>/src/frontend/__test__/setupTest.js"
     ],
