--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cypress": "^6.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "file-loader": "^6.2.0",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "0.9.0",
@@ -51,9 +52,9 @@
     "stylus-loader": "^4.3.1",
     "terser-webpack-plugin": "2.3.5",
     "webpack-cli": "3.3.11",
-    "webpack-manifest-plugin": "3.0.0-rc.0",
     "webpack-dev-middleware": "^4.0.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "3.0.0-rc.0"
   },
   "jest": {
     "testRegex": "src/frontend/__test__/.*\\.test.js$",
