--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server/",
-    "dev": "nodemon src/server/",
+    "dev": "ENV=development nodemon src/server/",
     "build": "ENV=production webpack-cli --config ./webpack.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
